--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -1691,11 +1691,7 @@ button.ghost-line:disabled .icon {
   margin-left: -0.063rem;
 }
 
-.btn-header:focus, .btn-header:hover {
-  background-color: #26A7FF;
-}
-
-.btn-header:active {
+.btn-header:focus, .btn-header:hover, .btn-header:active {
   background-color: #26A7FF;
 }
 
