--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -6,31 +6,109 @@ $layout-header-font-color:                   $white;
 $layout-header-font-weight:                  $font-weight-medium;
 $layout-header-bg-color:                     $point-blue;
 
-// element
+// element palette
+$layout-element-palette-width:               6.25rem; // 100px
+$layout-element-palette-bg-color:            $white;
+$layout-element-palette-border:              0.0625rem solid $line-gray; // 1px
+$layout-element-palette-box-shadow:          0.0625rem 0 0.4375rem 0 rgba(204, 206, 209, 0.15);// 1px 0px 7px 0px $pressed-gray, 불투명도 15%;
 
+// main > drawing-board
+$drawing-board-bg-color:                     $light-gray; // 모눈종이 바탕색
+$drawing-board-line-width:                   1; // 모눈종이 라인 굵기
+$drawing-board-line-color:                   $line-gray; // 모눈종이 선 색상
+
+// 미니맵
+$minimap-width:                              350px; // 350px
+$minimap-height:                             260px; // 260px
+$minimap-bg-color:                           $white;
+$minimap-inside-bg-color:                    $light-gray; // 미니맵 내부 배경 색상
+$minimap-border:                             0.0625rem solid $line-gray; // 1px
+$minimap-box-shadow:                         0 0 0.3125rem 0 $line-gray; // 0 0 5px 0
+$minimap-border-radius:                      0.0625rem; // 1px
+$minimap-guide-bg-color:                     #A3B6CC; // 미니맵 위치 변경시 표시되는 색상
+$minimap-guide-bg-color-opacity:             0.25; // 미니맵 위치 변경시 표시되는 색상 불투명도
+
+// 시뮬레이션 리포트
+$simulation-report-width:                    63.75rem; // 1020px
+$simulation-report-height:                   22.688rem; // 363px
+$simulation-report-bg-color:                 $white;
+$simulation-report-border:                   0.0625rem solid $line-gray; // 1px
+$simulation-report-box-shadow:               0 0 0.3125rem 0 $line-gray; // 0 0 5px 0
+$simulation-report-border-radius:            0.0625rem; // 1px
+// 모달의 제목과 성공/실패 결과 표시
+$simulation-report-title-font-size:          1.125rem; // 18px
+$simulation-report-title-font-weight:        $font-weight-medium;
+$simulation-report-title-font-color:         $light-black;
+$simulation-report-content-font-size:        1rem; // 16px
+$simulation-report-content-font-weight:      $font-weight-regular;
+$simulation-report-content-font-color:       $dark-gray;
+
+// process properties header
+$layout-properties-header-height:            2.5rem; // 40px
+$layout-properties-header-font-size:         $font-size-base;
+$layout-properties-header-font-color:        $white;
+$layout-properties-header-font-weight:       $font-weight-medium;
+$layout-properties-header-bg-color:          $hover-blue;
+
+// process properties
+$layout-properties-width:                     18.75rem; // 300px
+$layout-properties-bg-color:                  $white;
+$layout-properties-border:                    0.0625rem solid $line-gray; // 1px
+$layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
+
+// 세부 속성명
+$properties-title-font-size:                  $font-size-base; // 16px
+$properties-title-font-weight:                $font-weight-medium;
+$properties-title-font-color:                 $light-black;
+
+// clipboard tooltip
+// ID 복사하는 용도 > _tooltip.scss에 정의되어 있음
+$clipboard-tooltip-font-size:                 $font-size-base; // 16px
+$clipboard-tooltip-font-weight:               $font-weight-regular;
+$clipboard-tooltip-font-color:                $point-blue;
+$clipboard-tooltip-bg-color:                  $white;
+$clipboard-tooltip-border-color:              $point-blue;
+$clipboard-tooltip-border-width:              0.125rem; // 2px
+$clipboard-tooltip-border:                    $clipboard-tooltip-border-width solid $clipboard-tooltip-border-color;
+$clipboard-tooltip-border-radius:             0.0625rem; // 1px
+
+//////////////////////////// element ////////////////////////////
+// element
+$node-font-size:                              $font-size-base; // 16px
+$node-font-weight:                            $font-weight-medium;
+$node-font-color:                             $light-black;
+$node-width:                                  1; // 두께
+$node-selected-width:                         2;
+$node-selected-color:                         $point-blue;
+
+// task
+$event-color:                                 #FF5EAF; // start , end
+$gateway-color:                               #FFC336;
+$userTask-color:                              #1CC7D0;
+$manualTask-color:                            #2ECE7E;
+$scriptTask-color:                            #93C431;
+$subprocess-color:                            #CF87FF;
+$reject-color:                                #ff0000;
+$annotation-color:                            #000000;
+
+// 선
+$connector-color:                             $dark-gray;
+$connector-width:                             1; // 두께
+$connector-selected-width:                    2;
+$connector-pointer-color:                     $point-blue; // 점
+
+// 가이드라인 (정렬 일치시 나타나는 선)
+$guides-line-color:                           darkgray;
+
+// tooltip
+$tooltip-bg-color:                            $white;
+$tooltip-border-width:                        1;
+$tooltip-border-color:                        $light-blue;
+
+// readonly일 경우
 $element-readonly-font-color:                 $gray;
 $element-readonly-bg-color:                   $light-gray;
 $element-readonly-border-color:               $line-gray;
-$element-readonly-border-width:               0.0625rem; // 1px
-
-
-$white: #ffffff;
-$process-header-height: 3.125rem; // 50px
-$process-header-top-bottom-padding: 0.563rem; // 9px
-$process-header-real-height: $process-header-height - ($process-header-top-bottom-padding * 2);
-$process-element-palette-width: 6.25rem; // 100px
-$process-properties-panel-width: 18.75rem; // 300px
-$process-container-min-width: 75rem;  // 1200px
-$process-container-min-height: 41.563rem;  // 665px
-
-
-// button
-$button-font-size:                            16px;
-$button-font-weight:                          500; // medium
-$button-line-height:                          24px;
-$button-font-color:                           $light-black;
-$button-border:                               0.0625rem solid transparent;
-$button-bg-color:                             transparent;
 
 // color-picker palette
 $color-picker-palette-width:                  100%;
