--- a/src/main/resources/public/src/scss/portal/_tooltip.scss
+++ b/src/main/resources/public/src/scss/portal/_tooltip.scss
@@ -1,53 +1,1 @@
-.help-tooltip {
-    display: inline-block;
-    margin-left: 0.3125rem; // 5px
-    width: 0.9375rem; // 15px
-    height: 0.9375rem; // 15px
-    vertical-align: middle;
-
-    .help-tooltip-icon:before {
-        background: $pressed-gray;
-        -webkit-mask: url($icon-folder-path + "icon_tooltip.svg") no-repeat center center;
-        mask-image: url($icon-folder-path + "icon_tooltip.svg") ;
-        mask-repeat: no-repeat;
-        mask-position: center;
-    }
-
-    .tooltip-contents {
-        visibility: hidden;
-        background-color: $white;
-        width: 22.5rem; // 60px
-        font-size: 0.8125rem; // 13x;
-        color: $point-blue;
-        border: 0.0625rem solid $point-blue; // 1px
-        border-radius: 0.0625rem; // 1px
-        padding: 1.0625rem 0.9375rem 0.9375rem 0.9375rem; // 17px 15px 15px 15px
-        position: absolute;
-        z-index: 1;
-        box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2); // 5px
-        line-height: 1.25rem; // 20px
-        span {
-            color: $point-blue;
-            line-height: 2;
-        }
-    }
-
-    &:hover {
-        .tooltip-contents {
-            visibility: visible;
-            -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
-            -webkit-animation-delay: 0s;
-            animation-delay: 0s;
-            -webkit-animation-duration: 0.3s;
-            animation-duration: 0.3s;
-            -webkit-animation-name: fadeIn;
-            animation-name: fadeIn;
-            -webkit-animation-timing-function: ease-in-out;
-            animation-timing-function: ease-in-out;
-        }
-        .help-tooltip-icon {
-            background: $point-blue;
-        }
-    }
-}
+@import "../template/_tooltip.scss";
