--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3888,8 +3888,8 @@ body.thumbnail-modal-active {
 
 .help-tooltip .help-tooltip-icon {
   display: inline-block;
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
   -webkit-mask-image: url("../media/icons/icon_tooltip.svg");
   mask-image: url("../media/icons/icon_tooltip.svg");
   -webkit-mask-repeat: no-repeat;
@@ -3908,6 +3908,7 @@ body.thumbnail-modal-active {
   border: 0.0625rem solid #0098FF;
   border-radius: 0.0625rem;
   padding: 1.0625rem 0.9375rem 0.9375rem 0.9375rem;
+  margin: 0.25rem 0 0 0;
   position: absolute;
   left: -1.25rem;
   z-index: 1;
@@ -3916,6 +3917,7 @@ body.thumbnail-modal-active {
 
 .help-tooltip .tooltip-contents span {
   color: #0098FF;
+  word-break: keep-all;
   line-height: 1.5;
 }
 
