--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -95,3 +95,9 @@ $color-picker-palette-padding:               0.9375rem 0 0.9375rem 0.9375rem; //
 $color-picker-colorchip-size:                1rem; // 16px
 $color-picker-colorchip-margin:              0.1875rem; // 3px
 $color-picker-colorchip-border:              0.125rem solid $white; // 2px
+
+//////////////////////////// tooltip ////////////////////////////
+$tooltip-font-size:                          1rem; // 16px
+$tooltip-contents-width:                     18.13rem; // 290px
+$tooltip-contents-left:                      -1.25rem; // -20px
+$tooltip-contents-padding:                   1.0625rem 0.9375rem 0.9375rem 0.9375rem; // 17px 15px 15px 15px
