--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -349,3 +349,13 @@ $color-picker-palette-padding:               1.25rem 0 0.625rem 1.25rem; // 20px
 $color-picker-colorchip-size:                2.5rem;     // 40px
 $color-picker-colorchip-margin:              0.625rem;   // 10px
 $color-picker-colorchip-border:              0.375rem solid $white;      // 6px
+
+/////////////////////////////// tooltip ///////////////////////////////
+$tooltip-help-size:                          1rem; // 16px
+$tooltip-help-margin:                        0.3125rem; // 5px
+$tooltip-font-size:                          0.75rem; // 12px
+$tooltip-contents-left:                      auto;
+$tooltip-contents-width:                     22.5rem; // 360px
+$tooltip-contents-border:                    0.0625rem; // 1px
+$tooltip-contents-padding:                   0.8125rem;  // 13px
+$tooltip-contents-box-shadow:                0 0 0.3125rem 0 rgba(30, 47, 63, 0.2); // 5px
