--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3880,6 +3880,42 @@ body.thumbnail-modal-active {
  * @author jy.lim
  * @version 1.0
  */
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .help-tooltip {
   display: inline-block;
   margin-left: 0.3125rem;
@@ -3923,16 +3959,11 @@ body.thumbnail-modal-active {
 
 .help-tooltip:hover .tooltip-contents {
   visibility: visible;
-  -webkit-transform-origin: 100% 0%;
-  transform-origin: 100% 0%;
-  -webkit-animation-delay: 0s;
   animation-delay: 0s;
-  -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
-  -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
 }
 
 .help-tooltip:hover .help-tooltip-icon {
