--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -354,6 +354,8 @@ $color-picker-colorchip-border:              0.375rem solid $white;      // 6px
 $tooltip-help-size:                          1rem; // 16px
 $tooltip-help-margin:                        0.3125rem; // 5px
 $tooltip-font-size:                          0.75rem; // 12px
+$tooltip-contents-background:                $white;
+$tooltip-contents-color:                     $point-blue;
 $tooltip-contents-left:                      auto;
 $tooltip-contents-width:                     22.5rem; // 360px
 $tooltip-contents-border:                    0.0625rem; // 1px
